backend basically working
